--- a/Best_Stable_diffusion_XL_BestModel.ipynb
+++ b/Best_Stable_diffusion_XL_BestModel.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMCYBCnHDSXMeEeUSkUWvTr",
+      "authorship_tag": "ABX9TyMXMmN8UpXxYi7CZoaa7QIh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,11 +32,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "cellView": "form",
         "id": "BoNw3FXSqE4H"
       },
       "outputs": [],
       "source": [
-        "# @title Run This Shell\n",
+        "# @title ↓ Run This Shell by clicking on the run(play) button it will take 2 to 3 minutes after it your stable diffusion image generation model will be loaded and you can GENERATE images for free\n",
         "%%capture\n",
         "!pip install invisible_watermark transformers accelerate safetensors\n",
         "!pip install diffusers --upgrade\n",
