stable diffusion image generator FREE. text to image ai

--- a/Best_Stable_diffusion.ipynb
+++ b/Best_Stable_diffusion.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPXJPajFuHjw3+hyYpPyn0V",
+      "authorship_tag": "ABX9TyOmjZ/RewhCl4e0dzumX3fa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,14 +30,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
-        "id": "GsxYIgsbsFFy"
+        "id": "elKBR-oAHdLa"
       },
       "outputs": [],
       "source": [
-        "# @title  ↓ Load Important Packages Run this ( THIS IS THE FIRST STEP FOR YOUR TEXT TO IMAGE GENERATION AI) {IT LOADS THE IMPORTANT PACKAGES } TAKES 2 TO 3 MINUTES\n",
+        "# @title  ↓ Load Important Packages Run this ( THIS IS THE FIRST STEP FOR YOUR TEXT TO IMAGE GENERATION AI) {IT LOADS THE IMPORTANT PACKAGES } TAKES 2 TO 3 MINUTES depends upon your internet speed\n",
         "%%capture\n",
         "!pip install invisible_watermark transformers accelerate safetensors\n",
         "!pip install diffusers --upgrade\n",
@@ -62,39 +62,11 @@
         "gradio_url = iface.launch(share=True)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 611
-        },
         "cellView": "form",
-        "id": "S9b48sOKsKdC",
-        "outputId": "9881da4c-016b-4149-8b8b-9712da945c5f"
+        "id": "GsN64FKJIZLH"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "Running on public URL: https://6d550b3bad15f32091.gradio.live\n",
-            "\n",
-            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<div><iframe src=\"https://6d550b3bad15f32091.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
